# experiments

./: README.md
data_llm/: .gitignore  README.md  create_synthetic_data.py  dvc.yaml  get_data.py  plot_results.py  requirements.txt  train_setfit.py  zero_shot_llm.py
data_llm/results/: label_llm.json  setfit.json  synthetic_data.json  zero_shot.json
mantis_alpaca/: .gitignore  README.md  deepspeed_config.json  inference.py  pyproject.toml  train.py
mantis_lm/: .gitignore  README.md  deepspeed_config.json  evaluate.py  pyproject.toml  train.py
mantis_lm/our_dataset.hf/test/: data-00000-of-00001.arrow  state.json
mantis_lm/our_dataset.hf/train/: dataset_info.json  state.json
